# vicon_transformer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doc_mainpage.rst  package.xml  pyproject.toml  setup.cfg  setup.py  vicon_transformer.py
.github/workflows/: build_master.yml  build_pr.yml  python_ruff.yml  test.yml
doc/: breathing-cat.toml  breathing_cat.toml  configure_o80_driver_subjects.rst  example_o80_client.rst  example_receiver.rst  examples.rst  install.rst  overview.rst
include/vicon_transformer/: errors.hpp  fmt.hpp  o80_driver.hpp  o80_standalone.hpp  ostream.hpp  pam_vicon_o80.hpp  pointcloud.hpp  transform.hpp  types.hpp  vicon_receiver.hpp  vicon_transformer.hpp
pam_vicon_o80/: __init__.py  pam_vicon.py
python/tests/: TestSetingOrigin.py
python/vicon_transformer/: __init__.py  vicon_transformer.py
scripts/: TestClientPython.py  TestRetimingClientPython.py  bridge_zmq.py  convert_data_format.py  get_scene_configuration.py  o80_print_data.py  o80_standalone.py  playback.py  py_bridge_zmq.py  receiver.py  record_tennicam_vicon_trajectory.py  recorder.py  vicon_get_scene_configuration.py  vicon_o80_print_data.py  vicon_o80_standalone.py  vicon_print_data.py  vicon_print_data_py.py  zmq_print_data.py
src/: compute_tennicam_to_vicon_transform.cpp  ostream.cpp  pointcloud.cpp  record.cpp  transform.cpp  types.cpp  vicon_print_data.cpp  vicon_receiver.cpp  vicon_transformer.cpp
srcpy/: bindings.cpp  pam_vicon_o80.cpp
tests/: test_o80.py  test_pam_vicon.py  test_pointcloud.cpp  test_transform.cpp  test_transform.py  test_vicon_json.py  test_vicon_receiver.cpp  test_vicon_transformer.cpp  test_vicon_transformer.py  tf_listener_node.py  utils.hpp
tests/data/: frame_ping_at_origin.json  frame_ping_simple_translation.json  frame_with_missing_subjects.json  test_frame1.json  test_frame1_format3.json  test_frame2.json
vicon_transformer/: __init__.py  errors.py  receiver.py  tf_publisher.py  transform.py  vicon_json.py  vicon_transformer.py
