<?xml version="1.0"?>
<?xml-model
href="http://download.ros.org/schema/package_format3.xsd"
schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
    <name>vicon_transformer</name>
    <version>1.0.0</version>
    <description>uses vicon to find transforms of table and robot</description>
    <author email="dbuechler@tuebingen.mpg.de">Dieter Buechler</author>
    <maintainer email="dbuechler@tuebingen.mpg.de">Dieter Buechler</maintainer>
    <license>BSD 3-Clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>signal_handler</exec_depend>

    <build_depend>pybind11</build_depend>
    <build_depend>mpi_cmake_modules</build_depend>

    <depend>cereal</depend>
    <depend>cli_utils</depend>
    <depend>o80</depend>
    <depend>serialization_utils</depend>

    <test_depend>ament_cmake_gmock</test_depend>
    <test_depend>ament_cmake_pytest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
