[build-system]
requires = ["setuptools>=44.0.0"]
build-backend = "setuptools.build_meta"


[[tool.mypy.overrides]]
module = [
    "geometry_msgs.*",
    "o80",
    "rclpy.*",
    "scipy.*",
    "signal_handler",
    "tf2_ros.*",
    "vicon_dssdk",
    "vicon_transformer.vicon_transformer_bindings",
    "zmq",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
