[build-system]
requires = ["setuptools>=44.0.0"]
build-backend = "setuptools.build_meta"


[tool.ruff]
# enable all and disable a few via ignore below
select = ["ALL"]
extend-ignore = ["S", "T20", "INP", "UP", "COM", "ANN101", "ANN401", "PTH123", "I001"]
line-length = 88  # black
target-version = "py38"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "ANN", "PLR2004"]


[[tool.mypy.overrides]]
module = [
    "geometry_msgs.*",
    "o80",
    "rclpy.*",
    "scipy.*",
    "signal_handler",
    "tf2_ros.*",
    "vicon_dssdk",
    "vicon_transformer.vicon_transformer_bindings",
    "vicon_transformer.pam_vicon_o80",
    "zmq",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
