[build-system]
requires = ["setuptools>=44.0.0"]
build-backend = "setuptools.build_meta"


[tool.ruff]
# enable all and disable a few via ignore below
select = ["ALL"]
extend-ignore = [
    "BLE",
    "COM",
    "FBT",
    "INP",
    "S",
    "T20",
    "UP",
    "ANN101",
    "ANN102",
    "ANN401",
    "D107",
    "D205",
    "D212",
    "G004",
    "I001",
    "PTH123",
    "TRY400",
]
line-length = 88  # black
target-version = "py38"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "ANN", "PLR2004"]
"scripts/*" = ["D"]


[[tool.mypy.overrides]]
module = [
    "geometry_msgs.*",
    "matplotlib.*",
    "o80",
    "rclpy.*",
    "scipy.*",
    "signal_handler",
    "tf2_ros.*",
    "vicon_dssdk",
    "vicon_transformer.vicon_transformer_bindings",
    "vicon_transformer.pam_vicon_o80",
    "zmq",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
