# for ament_python
[develop]
script-dir=$base/lib/vicon_transformer
[install]
install-scripts=$base/lib/vicon_transformer

[metadata]
name = vicon_transformer
version = attr: vicon_transformer.__version__
description = Read frames provided by a Vicon system and transform into usable form for ISR projects
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/intelligent-soft-robots/vicon_transformer
    Bug Tracker = https://github.com/intelligent-soft-robots/vicon_transformer/issues

[options]
packages = find:
install_requires =
    numpy
    zmq
